--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Taniyah Payton</strong> 
 						<br>Aspiring Data Scientist & Web Developer</br>
+
 					</h1>
 				</div>
 			</header>
@@ -418,7 +419,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="mailto:tapay9@morgan.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Taniyah Payton 2026</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Taniyah Payton 2026</li>
 					</ul>
 				</div>
 			</footer>
