Update background image sizing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Taniyah Payton</strong> 
-						<br>Aspiring Data Scientist & Web Developer</br>
+						<br>Aspiring Data Scientist & Software Engineer</br>
 
 					</h1>
 				</div>
@@ -28,7 +28,7 @@
 						<header class="major">
 							<h2>Solving with Code</h2>
 						</header>
-						<p>I am a Computer Science student at Morgan State University with a passion for exploring how software systems are built from the ground up. My technical journey includes developing native mobile applications in Java and Kotlin, as well as crafting web interfaces using HTML and JavaScript. I aim to combine my foundational knowledge of Data Structures and Logic with practical tools like Python and AWS to build secure, reliable technology solutions.</p>
+						<p>I am a Computer Science student at Morgan State University with a strong interest in software engineering and data analytics. My technical experience includes developing mobile applications in Java and Kotlin and designing user-focused web interfaces with HTML and JavaScript. By combining my understanding of data structures and programming logic with practical tools such as Python, I aim to create scalable, data-driven solutions that enhance efficiency and decision-making.</p>
 						<ul class="actions">
 							<li><a href="#" class="button large">Learn More</a></li>
 						</ul>
